--- a/diff_tests/ecg_fnn.ipynb
+++ b/diff_tests/ecg_fnn.ipynb
@@ -172,12 +172,12 @@
     "\n",
     "\n",
     "# Load ECG dataset\n",
-    "filepath_train = '/cvlabdata2/cvlab/datasets_yiwang/ECG5000_TRAIN.txt'\n",
-    "filepath_test = '/cvlabdata2/cvlab/datasets_yiwang/ECG5000_TEST.txt'\n",
+    "filepath_train = '../ECG5000_TRAIN.txt'\n",
+    "filepath_test = '../ECG5000_TEST.txt'\n",
     "x_train_ip, x_train_op, x_test_ip, x_test_op, train_bkp, test_bkp = load_ECG5000(filepath_train, filepath_test)\n",
     "# print (x_train_ip.shape, x_train_op.shape, x_test_ip.shape, x_test_op.shape)\n",
-    "dataset_train = ECG5000Dataset(x_train_ip, x_train_op, train_bkp)\n",
-    "dataset_test  = ECG5000Dataset(x_test_ip, x_test_op, test_bkp)\n",
+    "dataset_train = create_Dataset(x_train_ip, x_train_op, train_bkp)\n",
+    "dataset_test  = create_Dataset(x_test_ip, x_test_op, test_bkp)\n",
     "trainloader = DataLoader(dataset_train, batch_size=batch_size,shuffle=True, num_workers=1)\n",
     "testloader  = DataLoader(dataset_test, batch_size=batch_size,shuffle=False, num_workers=1)\n",
     "\n",
