--- a/diff_tests/traffic_fnn.ipynb
+++ b/diff_tests/traffic_fnn.ipynb
@@ -155,12 +155,12 @@
     "sigma = 0.01\n",
     "gamma = 0.01\n",
     "\n",
-    "loc = '/cvlabdata2/cvlab/datasets_yiwang/traffic.txt'\n",
+    "loc = '../traffic.txt'\n",
     "# Load Min Temp dataset\n",
     "x_train_ip, x_train_op, x_test_ip, x_test_op, train_bkp, test_bkp = load_traffic(loc)\n",
     "# print (x_train_ip.shape, x_train_op.shape, x_test_ip.shape, x_test_op.shape)\n",
-    "dataset_train = ECG5000Dataset(x_train_ip, x_train_op, train_bkp)\n",
-    "dataset_test  = ECG5000Dataset(x_test_ip, x_test_op, test_bkp)\n",
+    "dataset_train = create_Dataset(x_train_ip, x_train_op, train_bkp)\n",
+    "dataset_test  = create_Dataset(x_test_ip, x_test_op, test_bkp)\n",
     "trainloader = DataLoader(dataset_train, batch_size=batch_size,shuffle=True, num_workers=1)\n",
     "testloader  = DataLoader(dataset_test, batch_size=batch_size,shuffle=False, num_workers=1)\n",
     "\n",
